refactor: ask Gemini 3.1 Pro to sort out GPT's mess